启动.NetCore基本配置

--- a/WebApiCoreFx/appsettings.json
+++ b/WebApiCoreFx/appsettings.json
@@ -4,5 +4,13 @@
       "Default": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "NCacheSessions": {
+    "CacheName": "demoCache",
+    "EnableLogs": "True",
+    "RequestTimeout": "90",
+    "EnableDetailLogs": "False",
+    "ExceptionsEnabled": "True",
+    "WriteExceptionsToEventLog": "False"
+  }
 }
