--- a/WebApiCoreFx/appsettings.json
+++ b/WebApiCoreFx/appsettings.json
@@ -5,6 +5,9 @@
     }
   },
   "AllowedHosts": "*",
+  "AppSetting": {
+    "DbConnStr": "server=localhost;uid=root;pwd=123456;database=db_cdz"
+  },
   "NCacheSessions": {
     "CacheName": "demoCache",
     "EnableLogs": "True",
