--- a/WebApiCoreFx/WebApiCoreFx.csproj
+++ b/WebApiCoreFx/WebApiCoreFx.csproj
@@ -13,6 +13,7 @@
 
   <ItemGroup>
     <PackageReference Include="Alachisoft.NCache.SDK" Version="4.9.1.1" />
+    <PackageReference Include="Alachisoft.NCache.SessionServices" Version="4.9.1" />
     <PackageReference Include="Autofac" Version="4.9.1" />
     <PackageReference Include="Autofac.Extensions.DependencyInjection" Version="4.4.0" />
     <PackageReference Include="log4net" Version="2.0.8" />
