--- a/WebApiCoreFx/appsettings.json
+++ b/WebApiCoreFx/appsettings.json
@@ -9,11 +9,21 @@
     "DbConnStr": "server=localhost;uid=root;pwd=123456;database=db_cdz"
   },
   "NCacheSessions": {
-    "CacheName": "demoCache",
+    "SessionAppId": null,
+    "SessionOptions": {
+      "CookieName": "AspNetCore.Session",
+      "CookieDomain": null,
+      "CookiePath": "/",
+      "CookieHttpOnly": "True",
+      "IdleTimeout": "5",
+      "CookieSecure": "None"
+    },
+    "CacheName": "mySessionCache",
     "EnableLogs": "True",
-    "RequestTimeout": "90",
-    "EnableDetailLogs": "False",
-    "ExceptionsEnabled": "True",
-    "WriteExceptionsToEventLog": "False"
+    "RequestTimeout": "90"
+  },
+  "AppSettings": {
+    "SiteTitle": "ASP.NET MVC Music Store",
+    "CacheDbResults": true
   }
 }
