--- a/WebApiCoreFx/WebApiCoreFx.csproj
+++ b/WebApiCoreFx/WebApiCoreFx.csproj
@@ -16,6 +16,7 @@
     <PackageReference Include="Alachisoft.NCache.SessionServices" Version="4.9.1" />
     <PackageReference Include="Autofac" Version="4.9.1" />
     <PackageReference Include="Autofac.Extensions.DependencyInjection" Version="4.4.0" />
+    <PackageReference Include="IdentityServer4.AccessTokenValidation" Version="2.1.0" />
     <PackageReference Include="log4net" Version="2.0.8" />
     <PackageReference Include="Microsoft.AspNetCore.App" />
     <PackageReference Include="Microsoft.AspNetCore.Razor.Design" Version="2.1.2" PrivateAssets="All" />
