--- a/WebApiCoreFx/Log4net.config
+++ b/WebApiCoreFx/Log4net.config
@@ -1,38 +1,25 @@
 ﻿<?xml version="1.0" encoding="utf-8" ?>
 <configuration>
-
-  <configSections>
-    <section name="log4net" type="log4net.Config.Log4NetConfigurationSectionHandler, log4net" />
-  </configSections>
-
+  <!-- This section contains the log4net configuration settings -->
   <log4net>
-    <root>
-      <level value="ALL" /><!--定义日志输出级别-->
-      <appender-ref ref="LogFileAppender" />
-    </root>
-
-    <!--<logger name="ERROR">
-      <level value="ERROR"/>
-      <appender-ref ref="LogFileAppender" />
-    </logger>-->
-
-    <appender name="LogFileAppender" type="log4net.Appender.FileAppender,log4net" >
-      <param name="File" value="Server.log" />
-      <param name="AppendToFile" value="true" />
-      <param name="RollingStyle" value="Date" />
-      <!--<param name="DatePattern" value="yyyy-MM-dd" />-->
-      <param name="StaticLogFileName" value="true" />
-      <layout  type="log4net.Layout.PatternLayout,log4net">
-        <!--<param name="Header" value="[Header]&#13;&#10;"/>
-        <param name="Footer" value="[Footer]&#13;&#10;"/>-->
-        <param name="ConversionPattern" value="%d [%t] %-5p %c - %m%n" />
+    <appender name="RollingLogFileAppender" type="log4net.Appender.RollingFileAppender">
+      <file value="Log/" />
+      <appendToFile value="true" />
+      <rollingStyle value="Composite" />
+      <staticLogFileName value="false" />
+      <datePattern value="yyyyMMdd'.log'" />
+      <maxSizeRollBackups value="10" />
+      <maximumFileSize value="50MB" />
+      <layout type="log4net.Layout.PatternLayout">
+        <conversionPattern value="%date  [%thread]  %-5level  %message%newline" />
       </layout>
-      <filter type="log4net.Filter.LevelRangeFilter">
-        <param name="LevelMin" value="INFO" />
-        <param name="LevelMax" value="ERROR" />
-      </filter>
     </appender>
 
-  </log4net>
+    <!-- Setup the root category, add the appenders and set the default level -->
+    <root>
+      <level value="ALL" />
+      <appender-ref ref="RollingLogFileAppender" />
+    </root>
 
+  </log4net>
 </configuration>
