--- a/Surging/Surging.TestDemo.IModuleService/Surging.TestDemo.IModuleService.csproj
+++ b/Surging/Surging.TestDemo.IModuleService/Surging.TestDemo.IModuleService.csproj
@@ -4,12 +4,23 @@
     <TargetFramework>netcoreapp2.2</TargetFramework>
   </PropertyGroup>
 
+  <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|AnyCPU'">
+    <DocumentationFile>H:\CSharp\WebApiDotnetCoreDemo\Surging\Surging.TestDemo.IModuleService\Surging.TestDemo.IModuleService.xml</DocumentationFile>
+    <OutputPath>bin\</OutputPath>
+  </PropertyGroup>
+
   <ItemGroup>
     <PackageReference Include="surging" Version="1.0.0" />
   </ItemGroup>
 
   <ItemGroup>
     <ProjectReference Include="..\Surging.DBModel\Surging.DBModel.csproj" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <None Update="Surging.TestDemo.IModuleService.xml">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </None>
   </ItemGroup>
 
 </Project>
