--- a/DotnetCore3WebApi/DapperTest/DapperTest.csproj
+++ b/DotnetCore3WebApi/DapperTest/DapperTest.csproj
@@ -7,6 +7,10 @@
 
   <ItemGroup>
     <PackageReference Include="Dapper" Version="2.0.4" />
+    <PackageReference Include="Microsoft.EntityFrameworkCore.Design" Version="3.0.0">
+      <PrivateAssets>all</PrivateAssets>
+      <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
+    </PackageReference>
     <PackageReference Include="MySql.Data" Version="8.0.17" />
   </ItemGroup>
 
