--- a/BaseFrameworkDemo/UserCenterApi/appsettings.json
+++ b/BaseFrameworkDemo/UserCenterApi/appsettings.json
@@ -4,5 +4,11 @@
       "Default": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "Consul": {
+    "Host": "http://127.0.0.1:8500",
+    "IP": "127.0.0.1",
+    "Port": "8500",
+    "ServiceName": "UserCenterAPI"
+  }
 }
