--- a/BaseFrameworkDemo/UserCenterApi/appsettings.json
+++ b/BaseFrameworkDemo/UserCenterApi/appsettings.json
@@ -9,6 +9,16 @@
     "Host": "http://127.0.0.1:8500",
     "IP": "127.0.0.1",
     "Port": "8500",
-    "ServiceName": "UserCenterAPI"
+    "ServiceName": "Gateway"
+  },
+  "ServiceDiscovery": {
+    "ServiceName": "UserCenterAPI",
+    "Consul": {
+      "HttpEndpoint": "http://127.0.0.1:8500",
+      "DnsEndpoint": {
+        "Address": "127.0.0.1",
+        "Port": 8600
+      }
+    }
   }
 }
