--- a/BaseFrameworkDemo/WebApiCoreFx/appsettings.json
+++ b/BaseFrameworkDemo/WebApiCoreFx/appsettings.json
@@ -8,6 +8,10 @@
   "AppSetting": {
     "DbConnStr": "server=localhost;uid=root;pwd=123456;database=db_cdz"
   },
+  "Redis": {
+    "ConnectionString": "localhost:6379",
+    "IsOPenRedis": true
+  },
   "NCacheSessions": {
     "SessionAppId": null,
     "SessionOptions": {
