--- a/.gitignore
+++ b/.gitignore
@@ -35,6 +35,7 @@ Generated\ Files/
 # MSTest test Results
 [Tt]est[Rr]esult*/
 [Bb]uild[Ll]og.*
+[Ll]og/
 
 # NUNIT
 *.VisualState.xml
@@ -83,6 +84,7 @@ StyleCopReport.xml
 *.pidb
 *.svclog
 *.scc
+*.log
 
 # Chutzpah Test files
 _Chutzpah*
