--- a/BaseFrameworkDemo/AopDLL/AopDLL.csproj
+++ b/BaseFrameworkDemo/AopDLL/AopDLL.csproj
@@ -9,6 +9,7 @@
     <PackageReference Include="AspectCore.Extensions.Autofac" Version="2.0.0" />
     <PackageReference Include="AspectCore.Extensions.Configuration" Version="2.0.0" />
     <PackageReference Include="AspectCore.Extensions.DependencyInjection" Version="2.0.0" />
+    <PackageReference Include="Microsoft.Extensions.Caching.Redis" Version="2.2.0" />
     <PackageReference Include="Microsoft.Extensions.DependencyInjection" Version="2.2.0" />
   </ItemGroup>
 
