--- a/BaseFrameworkDemo/WebApiCoreFx/WebApiCoreFx.csproj
+++ b/BaseFrameworkDemo/WebApiCoreFx/WebApiCoreFx.csproj
@@ -2,6 +2,11 @@
 
   <PropertyGroup>
     <TargetFramework>netcoreapp2.2</TargetFramework>
+    <AspNetCoreHostingModel>OutProcess</AspNetCoreHostingModel>
+    <!-- ServerGarbageCollection:服务器垃圾收集:不会让内存无限增长 -->
+    <ServerGarbageCollection>false</ServerGarbageCollection>
+    <!-- ServerGarbageCollection:并发垃圾收集:不会让内存无限增长 -->
+    <ConcurrentGarbageCollection>true</ConcurrentGarbageCollection>
     <StartupObject></StartupObject>
     <ApplicationIcon />
     <OutputType>Exe</OutputType>
