三种aop实现方式

--- a/BaseFrameworkDemo/ILogicLayer/ILogicLayer.csproj
+++ b/BaseFrameworkDemo/ILogicLayer/ILogicLayer.csproj
@@ -5,6 +5,7 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\AopDLL\AopDLL.csproj" />
     <ProjectReference Include="..\DBModel\DBModel.csproj" />
   </ItemGroup>
 
