--- a/BaseFrameworkDemo/WebApiCoreFx/appsettings.json
+++ b/BaseFrameworkDemo/WebApiCoreFx/appsettings.json
@@ -5,8 +5,8 @@
     }
   },
   "AllowedHosts": "*",
-  "AppSetting": {
-    "DbConnStr": "server=localhost;uid=root;pwd=123456;database=db_cdz"
+  "ConnectionStrings": {
+    "MysqlConnection": "server=localhost;uid=root;pwd=123456;database=db_cdz"
   },
   "Redis": {
     "ConnectionString": "localhost:6379",
