自定义身份验证过滤器

--- a/BaseFrameworkDemo/WebApiCoreFx/appsettings.json
+++ b/BaseFrameworkDemo/WebApiCoreFx/appsettings.json
@@ -29,5 +29,8 @@
   "AppSettings": {
     "SiteTitle": "ASP.NET MVC Music Store",
     "CacheDbResults": true
+  },
+  "Authentication": {
+    "SymmetricKey": "need_to_get_this_from_enviroment"
   }
 }
