--- a/BaseFrameworkDemo/UserCenterApi/Properties/launchSettings.json
+++ b/BaseFrameworkDemo/UserCenterApi/Properties/launchSettings.json
@@ -24,7 +24,7 @@
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Development"
       },
-      "applicationUrl": "http://0.0.0.0:10011"
+      "applicationUrl": "http://localhost:10011"
     }
   }
 }
