1.微信登录迁移到WxAppUtil.dll;2.使用DotnetCore.NPOI集成解析EXCEL工具(BaseFrameworkDemo.LogicLayer.Util.AnalyseExcelTool)

--- a/BaseFrameworkDemo/WebApiCoreFx/WebApiCoreFx.csproj
+++ b/BaseFrameworkDemo/WebApiCoreFx/WebApiCoreFx.csproj
@@ -53,6 +53,7 @@
     <ProjectReference Include="..\IDBLayer\IDBLayer.csproj" />
     <ProjectReference Include="..\ILogicLayer\ILogicLayer.csproj" />
     <ProjectReference Include="..\LogicLayer\LogicLayer.csproj" />
+    <ProjectReference Include="..\WxAppUtil\WxAppUtil.csproj" />
   </ItemGroup>
 
   <ItemGroup>
