--- a/BaseFrameworkDemo/LogicLayer/LogicLayer.csproj
+++ b/BaseFrameworkDemo/LogicLayer/LogicLayer.csproj
@@ -5,6 +5,7 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="DotNetCore.NPOI" Version="1.2.2" />
     <PackageReference Include="IdentityServer4.AccessTokenValidation" Version="2.2.0" />
   </ItemGroup>
 
