部分中间件调整到3.1

--- a/BaseFrameworkDemo/WebApiCoreFx/Properties/launchSettings.json
+++ b/BaseFrameworkDemo/WebApiCoreFx/Properties/launchSettings.json
@@ -20,7 +20,7 @@
     "WebApiCoreFx": {
       "commandName": "Project",
       "launchBrowser": true,
-      "launchUrl": "api/values",
+      "launchUrl": "api/values/get",
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Development"
       },
