--- a/BaseFrameworkDemo/WebApiCoreFx/appsettings.json
+++ b/BaseFrameworkDemo/WebApiCoreFx/appsettings.json
@@ -5,6 +5,7 @@
     }
   },
   "AllowedHosts": "*",
+  "CorsOrigins": [ "http://0.0.0.0:5000", "https://*:5001" ],
   "ConnectionStrings": {
     "MysqlConnection": "server=localhost;uid=root;pwd=123456;database=db_cdz"
   },
