--- a/BaseFrameworkDemo/LogicLayer/LogicLayer.csproj
+++ b/BaseFrameworkDemo/LogicLayer/LogicLayer.csproj
@@ -7,6 +7,7 @@
   <ItemGroup>
     <PackageReference Include="DotNetCore.NPOI" Version="1.2.2" />
     <PackageReference Include="IdentityServer4.AccessTokenValidation" Version="2.2.0" />
+    <PackageReference Include="Microsoft.Extensions.Configuration.Json" Version="3.1.1" />
   </ItemGroup>
 
   <ItemGroup>
