配置ef core3.1 使用 DbCpntextPool注入

--- a/BaseFrameworkDemo/WebApiCoreFx/Dockerfile
+++ b/BaseFrameworkDemo/WebApiCoreFx/Dockerfile
@@ -1,16 +1,21 @@
 #See https://aka.ms/containerfastmode to understand how Visual Studio uses this Dockerfile to build your images for faster debugging.
 
-FROM mcr.microsoft.com/dotnet/core/aspnet:2.2-stretch-slim AS base
+#Depending on the operating system of the host machines(s) that will build or run the containers, the image specified in the FROM statement may need to be changed.
+#For more information, please see https://aka.ms/containercompat
+
+FROM mcr.microsoft.com/dotnet/core/aspnet:3.1-nanoserver-1903 AS base
 WORKDIR /app
 EXPOSE 80
 EXPOSE 443
 
-FROM mcr.microsoft.com/dotnet/core/sdk:2.2-stretch AS build
+FROM mcr.microsoft.com/dotnet/core/sdk:3.1-nanoserver-1903 AS build
 WORKDIR /src
 COPY ["BaseFrameworkDemo/WebApiCoreFx/WebApiCoreFx.csproj", "BaseFrameworkDemo/WebApiCoreFx/"]
-COPY ["BaseFrameworkDemo/DBLayer/DBLayer.csproj", "BaseFrameworkDemo/DBLayer/"]
+COPY ["BaseFrameworkDemo/EFCoreDBLayer/EFCoreDBLayer.csproj", "BaseFrameworkDemo/EFCoreDBLayer/"]
 COPY ["BaseFrameworkDemo/IDBLayer/IDBLayer.csproj", "BaseFrameworkDemo/IDBLayer/"]
 COPY ["BaseFrameworkDemo/DBModel/DBModel.csproj", "BaseFrameworkDemo/DBModel/"]
+COPY ["BaseFrameworkDemo/DBLayer/DBLayer.csproj", "BaseFrameworkDemo/DBLayer/"]
+COPY ["BaseFrameworkDemo/WxAppUtil/WxAppUtil.csproj", "BaseFrameworkDemo/WxAppUtil/"]
 COPY ["BaseFrameworkDemo/LogicLayer/LogicLayer.csproj", "BaseFrameworkDemo/LogicLayer/"]
 COPY ["BaseFrameworkDemo/ILogicLayer/ILogicLayer.csproj", "BaseFrameworkDemo/ILogicLayer/"]
 COPY ["BaseFrameworkDemo/AopDLL/AopDLL.csproj", "BaseFrameworkDemo/AopDLL/"]
