--- a/BaseFrameworkDemo/DBModel/DBModel.csproj
+++ b/BaseFrameworkDemo/DBModel/DBModel.csproj
@@ -6,8 +6,10 @@
 
   <ItemGroup>
     <PackageReference Include="Microsoft.EntityFrameworkCore" Version="3.1.1" />
-    <PackageReference Include="MySql.Data.EntityFrameworkCore" Version="6.10.9" />
-    <PackageReference Include="MySql.Data.EntityFrameworkCore.Design" Version="6.10.9" />
+    <PackageReference Include="Microsoft.EntityFrameworkCore.Relational" Version="3.1.1" />
+    <PackageReference Include="Microsoft.EntityFrameworkCore.Tools" Version="3.1.1"/>
+    <PackageReference Include="MySql.Data.EntityFrameworkCore" Version="8.0.19" />
+    <PackageReference Include="MySql.Data.EntityFrameworkCore.Design" Version="8.0.19" />
     <PackageReference Include="Pomelo.EntityFrameworkCore.MySql" Version="3.1.1" />
   </ItemGroup>
 
