--- a/BaseFrameworkDemo/WebApiCoreFx/appsettings.json
+++ b/BaseFrameworkDemo/WebApiCoreFx/appsettings.json
@@ -4,6 +4,7 @@
       "Default": "Warning"
     }
   },
+  "StartUpUrls": [ "http://*:9876", "https://*:9877" ],
   "AllowedHosts": "*",
   "CorsOrigins": [ "http://0.0.0.0:5000", "https://*:5001" ],
   "ConnectionStrings": {
