--- a/BaseFrameworkDemo/WebApiCoreFx/appsettings.json
+++ b/BaseFrameworkDemo/WebApiCoreFx/appsettings.json
@@ -8,11 +8,12 @@
   "AllowedHosts": "*",
   "CorsOrigins": [ "http://0.0.0.0:5000", "https://*:5001" ],
   "ConnectionStrings": {
-    "MysqlConnection": "server=localhost;uid=root;pwd=123456;database=db_cdz"
+    "MysqlConnection": "server=localhost;uid=root;pwd=123456;database=db_cdz",
+    "RedisConnection": "127.0.0.1:6379"
   },
   "Redis": {
     "ConnectionString": "localhost:6379",
-    "IsOPenRedis": true
+    "IsOpenRedis": true
   },
   "NCacheSessions": {
     "SessionAppId": null,
