+ IocExtension.cs，对程序集依赖注入

--- a/BaseFrameworkDemo/WebApiCoreFx/appsettings.json
+++ b/BaseFrameworkDemo/WebApiCoreFx/appsettings.json
@@ -6,7 +6,7 @@
   },
   "StartUpUrls": [ "http://*:9876", "https://*:9877" ],
   "AllowedHosts": "*",
-  "CorsOrigins": [ "http://0.0.0.0:5000", "https://*:5001" ],
+  "CorsOrigins": [ "*" ],
   "ConnectionStrings": {
     "MysqlConnection": "server=localhost;uid=root;pwd=123456;database=db_cdz",
     "RedisConnection": "127.0.0.1:6379"
@@ -15,6 +15,10 @@
     "ConnectionString": "localhost:6379",
     "IsOpenRedis": true
   },
+  // 程序集Ioc依赖注入
+  "IocAssembly": [
+    [ "ILogicLayer", "LogicLayer" ] // 1接口;2实现;
+  ],
   "NCacheSessions": {
     "SessionAppId": null,
     "SessionOptions": {
