--- a/BaseFrameworkDemo/WebApiCoreFx/Dockerfile.original
+++ b/BaseFrameworkDemo/WebApiCoreFx/Dockerfile.original
@@ -5,7 +5,7 @@
 
 FROM mcr.microsoft.com/dotnet/core/aspnet:3.1-nanoserver-1903 AS base
 WORKDIR /app
-EXPOSE 80
+EXPOSE 9876
 EXPOSE 443
 
 FROM mcr.microsoft.com/dotnet/core/sdk:3.1-nanoserver-1903 AS build
@@ -14,11 +14,11 @@ COPY ["BaseFrameworkDemo/WebApiCoreFx/WebApiCoreFx.csproj", "BaseFrameworkDemo/W
 COPY ["BaseFrameworkDemo/EFCoreDBLayer/EFCoreDBLayer.csproj", "BaseFrameworkDemo/EFCoreDBLayer/"]
 COPY ["BaseFrameworkDemo/IDBLayer/IDBLayer.csproj", "BaseFrameworkDemo/IDBLayer/"]
 COPY ["BaseFrameworkDemo/DBModel/DBModel.csproj", "BaseFrameworkDemo/DBModel/"]
+COPY ["BaseFrameworkDemo/DBLayer/DBLayer.csproj", "BaseFrameworkDemo/DBLayer/"]
 COPY ["BaseFrameworkDemo/WxAppUtil/WxAppUtil.csproj", "BaseFrameworkDemo/WxAppUtil/"]
 COPY ["BaseFrameworkDemo/LogicLayer/LogicLayer.csproj", "BaseFrameworkDemo/LogicLayer/"]
 COPY ["BaseFrameworkDemo/ILogicLayer/ILogicLayer.csproj", "BaseFrameworkDemo/ILogicLayer/"]
 COPY ["BaseFrameworkDemo/AopDLL/AopDLL.csproj", "BaseFrameworkDemo/AopDLL/"]
-COPY ["BaseFrameworkDemo/Ocelot.ConsulExtensions/Ocelot.ConsulExtensions.csproj", "BaseFrameworkDemo/Ocelot.ConsulExtensions/"]
 COPY ["BaseFrameworkDemo/CustomizeMiddleware/CustomizeMiddleware.csproj", "BaseFrameworkDemo/CustomizeMiddleware/"]
 RUN dotnet restore "BaseFrameworkDemo/WebApiCoreFx/WebApiCoreFx.csproj"
 COPY . .
