--- a/OcelotGateway/Ocelot.GatewayProj/Ocelot.GatewayProj.csproj
+++ b/OcelotGateway/Ocelot.GatewayProj/Ocelot.GatewayProj.csproj
@@ -1,7 +1,7 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk.Web">
 
   <PropertyGroup>
-    <TargetFramework>netcoreapp2.2</TargetFramework>
+    <TargetFramework>netcoreapp3.1</TargetFramework>
   </PropertyGroup>
 
   <ItemGroup>
@@ -10,16 +10,14 @@
 
   <ItemGroup>
     <PackageReference Include="DnsClient" Version="1.2.0" />
-    <PackageReference Include="IdentityModel" Version="4.0.0" />
+    <PackageReference Include="IdentityServer4" Version="3.1.1" />
     <PackageReference Include="log4net" Version="2.0.8" />
-    <PackageReference Include="Microsoft.AspNetCore.App" />
-    <PackageReference Include="Microsoft.AspNetCore.Razor.Design" Version="2.2.0" PrivateAssets="All" />
-    <PackageReference Include="Microsoft.Extensions.Logging" Version="2.2.0" />
-    <PackageReference Include="NLog" Version="4.6.7" />
+    <PackageReference Include="Microsoft.Extensions.Logging" Version="3.1.1" />
+    <PackageReference Include="NLog" Version="4.7.2" />
     <PackageReference Include="NLog.Extensions.Logging" Version="1.6.1" />
-    <PackageReference Include="Ocelot" Version="13.5.2" />
+    <PackageReference Include="Ocelot" Version="15.0.6" />
     <PackageReference Include="Ocelot.Cache.CacheManager" Version="13.5.2" />
-    <PackageReference Include="Ocelot.Provider.Consul" Version="13.5.2" />
+    <PackageReference Include="Ocelot.Provider.Consul" Version="15.0.6" />
   </ItemGroup>
 
   <ItemGroup>
@@ -33,7 +31,5 @@
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </Content>
   </ItemGroup>
-
-  <ProjectExtensions><VisualStudio><UserProperties ocelot_1json__JsonSchema="" /></VisualStudio></ProjectExtensions>
 
 </Project>
