+MultipleCache组件：自定义特性,实现自动缓存(Redis+Memory)

--- a/BaseFrameworkDemo/WebApiCoreFx/WebApiCoreFx.csproj
+++ b/BaseFrameworkDemo/WebApiCoreFx/WebApiCoreFx.csproj
@@ -47,6 +47,7 @@
   </ItemGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\..\Components\MultipleCache.CoreComponent\MultipleCache.CoreComponent.csproj" />
     <ProjectReference Include="..\CustomizeMiddleware\CustomizeMiddleware.csproj" />
     <ProjectReference Include="..\EFCoreDBLayer\EFCoreDBLayer.MySQL.csproj" />
     <ProjectReference Include="..\IDBLayer\IDBLayer.csproj" />
