--- a/Components/EncryptionTool/EncryptionTool.csproj
+++ b/Components/EncryptionTool/EncryptionTool.csproj
@@ -2,6 +2,11 @@
 
   <PropertyGroup>
     <TargetFramework>netcoreapp3.1</TargetFramework>
+    <OutputType>Library</OutputType>
   </PropertyGroup>
+
+  <ItemGroup>
+    <PackageReference Include="System.Security.Cryptography.OpenSsl" Version="4.7.0" />
+  </ItemGroup>
 
 </Project>
