--- a/OcelotGateway/Ocelot.GatewayProj/Ocelot.GatewayProj.csproj
+++ b/OcelotGateway/Ocelot.GatewayProj/Ocelot.GatewayProj.csproj
@@ -9,25 +9,28 @@
   </ItemGroup>
 
   <ItemGroup>
-    <PackageReference Include="DnsClient" Version="1.2.0" />
+    <PackageReference Include="App.Metrics" Version="4.1.0" />
+    <PackageReference Include="App.Metrics.AspNetCore.Endpoints" Version="4.1.0" />
+    <PackageReference Include="App.Metrics.AspNetCore.Reporting" Version="4.0.0" />
+    <PackageReference Include="App.Metrics.AspNetCore.Tracking" Version="4.1.0" />
+    <PackageReference Include="App.Metrics.Reporting.InfluxDB" Version="4.1.0" />
+    <PackageReference Include="DnsClient" Version="1.3.2" />
     <PackageReference Include="IdentityServer4" Version="3.1.1" />
-    <PackageReference Include="log4net" Version="2.0.8" />
-    <PackageReference Include="Microsoft.Extensions.Logging" Version="3.1.1" />
+    <PackageReference Include="log4net" Version="2.0.11" />
+    <PackageReference Include="Microsoft.Extensions.Logging" Version="3.1.8" />
     <PackageReference Include="NLog" Version="4.7.2" />
     <PackageReference Include="NLog.Extensions.Logging" Version="1.6.1" />
-    <PackageReference Include="Ocelot" Version="15.0.6" />
+    <PackageReference Include="Ocelot" Version="16.0.1" />
     <PackageReference Include="Ocelot.Cache.CacheManager" Version="13.5.2" />
     <PackageReference Include="Ocelot.Provider.Consul" Version="15.0.6" />
+    <PackageReference Include="Ocelot.Provider.Polly" Version="16.0.1" />
   </ItemGroup>
 
   <ItemGroup>
     <Content Update="appsettings.json">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </Content>
-    <Content Update="NLog.config">
-      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
-    </Content>
-    <Content Update="Ocelot.json">
+    <Content Update="Log4net.config">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </Content>
   </ItemGroup>
