--- a/BaseFrameworkDemo/WebApiCoreFx/WebApiCoreFx.csproj
+++ b/BaseFrameworkDemo/WebApiCoreFx/WebApiCoreFx.csproj
@@ -39,6 +39,7 @@
     <PackageReference Include="Autofac.Extras.DynamicProxy" Version="5.0.0" />
     <PackageReference Include="log4net" Version="2.0.8" />
     <PackageReference Include="Microsoft.AspNetCore.Antiforgery" Version="2.2.0" />
+    <PackageReference Include="Microsoft.AspNetCore.Mvc.NewtonsoftJson" Version="3.1.9" />
     <PackageReference Include="Microsoft.Extensions.Logging.Log4Net.AspNetCore" Version="3.1.0" />
     <PackageReference Include="Microsoft.VisualStudio.Azure.Containers.Tools.Targets" Version="1.10.8" />
     <!--<PackageReference Include="Microsoft.Extensions.Hosting.Abstractions" Version="3.1.2" />-->
@@ -67,9 +68,6 @@
   </ItemGroup>
 
   <ItemGroup>
-    <None Update="client.ncconf">
-      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
-    </None>
     <None Update="config.ncconf">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </None>
