--- a/Components/ToolSet/ToolSet.csproj
+++ b/Components/ToolSet/ToolSet.csproj
@@ -2,10 +2,11 @@
 
 	<PropertyGroup>
 		<TargetFramework>netcoreapp3.1</TargetFramework>
-		<OutputType>Library</OutputType>
+		<OutputType>Exe</OutputType>
 	</PropertyGroup>
 
 	<ItemGroup>
+		<PackageReference Include="Snowflake.Core" Version="2.0.0" />
 		<PackageReference Include="System.Management" Version="4.7.0" />
 		<PackageReference Include="System.Security.Cryptography.OpenSsl" Version="4.7.0" />
 	</ItemGroup>
