--- a/Components/ToolSet/ToolSet.csproj
+++ b/Components/ToolSet/ToolSet.csproj
@@ -6,6 +6,8 @@
 	</PropertyGroup>
 
 	<ItemGroup>
+		<PackageReference Include="Quartz.AspNetCore" Version="3.2.3" />
+		<PackageReference Include="Quartz.Plugins" Version="3.2.3" />
 		<PackageReference Include="Snowflake.Core" Version="2.0.0" />
 		<PackageReference Include="System.Management" Version="4.7.0" />
 		<PackageReference Include="System.Security.Cryptography.OpenSsl" Version="4.7.0" />
