--- a/OcelotGateway/Ocelot.GatewayProj/Ocelot.GatewayProj.csproj
+++ b/OcelotGateway/Ocelot.GatewayProj/Ocelot.GatewayProj.csproj
@@ -20,10 +20,12 @@
     <PackageReference Include="Microsoft.Extensions.Logging" Version="3.1.8" />
     <PackageReference Include="NLog" Version="4.7.2" />
     <PackageReference Include="NLog.Extensions.Logging" Version="1.6.1" />
-    <PackageReference Include="Ocelot" Version="16.0.1" />
-    <PackageReference Include="Ocelot.Cache.CacheManager" Version="13.5.2" />
-    <PackageReference Include="Ocelot.Provider.Consul" Version="15.0.6" />
-    <PackageReference Include="Ocelot.Provider.Polly" Version="16.0.1" />
+    <PackageReference Include="Ocelot" Version="16.0.0" />
+    <PackageReference Include="Ocelot.Cache.CacheManager" Version="16.0.0" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\..\Components\Ocelot.ConsulExtensions\Ocelot.ConsulExtensions.csproj" />
   </ItemGroup>
 
   <ItemGroup>
