consul config + heartrate & timeout

--- a/Components/Ocelot.ConsulExtensions/Ocelot.ConsulExtensions.csproj
+++ b/Components/Ocelot.ConsulExtensions/Ocelot.ConsulExtensions.csproj
@@ -11,7 +11,7 @@
 
   <ItemGroup>
     <None Update="ConsulConfig.json">
-      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+      <CopyToOutputDirectory>Never</CopyToOutputDirectory>
     </None>
   </ItemGroup>
 
