consul config + heartrate & timeout

--- a/BaseFrameworkDemo/UserCenterApi/appsettings.json
+++ b/BaseFrameworkDemo/UserCenterApi/appsettings.json
@@ -10,16 +10,8 @@
     "ServiceName": "UserCenterApi", //当前服务名称，可以多个实例共享
     "ServiceUriHost": "http://10.1.72.24", //当前服务地址
     "ServiceUriPort": "5000", //当前服务地址
-    "HealthCheck": "/api/health/check" //健康检查的地址，当前服务公布出来的一个api接口
-  },
-  "ServiceDiscovery": {
-    "ServiceName": "UserCenterAPI",
-    "Consul": {
-      "HttpEndpoint": "http://192.168.233.128:8500",
-      "DnsEndpoint": {
-        "Address": "127.0.0.1",
-        "Port": 8600
-      }
-    }
+    "HealthCheck": "/api/health/check", //健康检查的地址，当前服务公布出来的一个api接口
+    "HeartRate": 10, // 健康检查心跳
+    "Timeout": 10 // 健康检查超时
   }
 }
