--- a/Components/Ocelot.ConsulExtensions/ConsulConfig.json
+++ b/Components/Ocelot.ConsulExtensions/ConsulConfig.json
@@ -4,6 +4,8 @@
     "ServiceName": "UserCenterApi", //当前服务名称，可以多个实例共享
     "ServiceUriHost": "http://10.1.72.24", //当前服务地址
     "ServiceUriPort": "5000", //当前服务地址
-    "HealthCheck": "/api/health/check" //健康检查的地址，当前服务公布出来的一个api接口
+    "HealthCheck": "/api/health/check", //健康检查的地址，当前服务公布出来的一个api接口
+    "HeartRate": 10, // 健康检查心跳
+    "Timeout": 10 // 健康检查超时
   }
 }
