UserCenterApi:+UseCentralRoutePrefix(“/prefix”)统一给API加路由前缀

--- a/Components/ToolSet/ToolSet.csproj
+++ b/Components/ToolSet/ToolSet.csproj
@@ -13,4 +13,8 @@
 		<PackageReference Include="System.Security.Cryptography.OpenSsl" Version="4.7.0" />
 	</ItemGroup>
 
+	<ItemGroup>
+	  <Folder Include="Router\" />
+	</ItemGroup>
+
 </Project>
