--- a/OcelotGateway/Ocelot.GatewayProj/appsettings.json
+++ b/OcelotGateway/Ocelot.GatewayProj/appsettings.json
@@ -130,8 +130,9 @@
       "Host": "192.168.233.128",
       "Port": 8500,
       "Type": "Consul",
-      "PollingInterval": 100
-      //如果你有在Consul上配置key/value，则在这里输入配置key。
+      // 以毫秒为单位，告诉Ocelot多久调用一次Consul来更改服务配置
+      "PollingInterval": 1000
+      // 如果你有在Consul上配置key/value，则在这里输入配置key。
       //"ConfigurationKey": "MyService_AB"
     },
 
