--- a/BaseFrameworkDemo/UserCenterApi/UserCenterApi.csproj
+++ b/BaseFrameworkDemo/UserCenterApi/UserCenterApi.csproj
@@ -15,6 +15,7 @@
     <PackageReference Include="Microsoft.VisualStudio.Web.CodeGeneration.Design" Version="2.2.4" />
     <PackageReference Include="NLog" Version="4.6.7" />
     <PackageReference Include="NLog.Extensions.Logging" Version="1.6.1" />
+	<PackageReference Include="Swashbuckle.AspNetCore" Version="5.0.0" />
   </ItemGroup>
 
   <ItemGroup>
