--- a/Components/MultipleCache.CoreComponent/MultipleCache.CoreComponent.csproj
+++ b/Components/MultipleCache.CoreComponent/MultipleCache.CoreComponent.csproj
@@ -10,6 +10,7 @@
     <PackageReference Include="Microsoft.Extensions.Caching.Memory" Version="3.1.5" />
     <PackageReference Include="Microsoft.Extensions.Caching.Redis" Version="2.2.0" />
     <PackageReference Include="Microsoft.Extensions.DependencyInjection" Version="3.1.5" />
+    <PackageReference Include="StackExchange.Redis" Version="2.2.4" />
   </ItemGroup>
 
 </Project>
