--- a/BaseFrameworkDemo/UserCenterApi/docker-compose.yml
+++ b/BaseFrameworkDemo/UserCenterApi/docker-compose.yml
@@ -1,17 +1,16 @@
 version: '3'
-# networks:
-#  bosi-network:
-#    external: true
+networks:
+ mynet:
+   external: true
 services:
-  UserCenterApi.dev:
+  usercenterapi.dev:
     build: .
-    image: UserCenterApi.dev
-    container_name: UserCenterApi.dev
-#    networks:
-#      - bosi-network
-#    volumes:
-#      - "/home/logs.dev/UserCenterApi:/app/logs"
-#      - "/home/filedownload:/app/filedown"
+    image: usercenterapi.dev
+    container_name: usercenterapi.dev
+   networks:
+     - mynet
+   volumes:
+     - "/home/lut/usercenterapi:/app"
     restart: always
     ports: 
       - "10080:80"
