--- a/BaseFrameworkDemo/EFCoreDBLayer/EFCoreDBLayer.MySQL.csproj
+++ b/BaseFrameworkDemo/EFCoreDBLayer/EFCoreDBLayer.MySQL.csproj
@@ -5,6 +5,11 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="EFCore.BulkExtensions" Version="3.3.1" />
+    <PackageReference Include="System.Data.SqlClient" Version="4.8.2" />
+  </ItemGroup>
+
+  <ItemGroup>
     <ProjectReference Include="..\DBModel\DBModel.csproj" />
     <ProjectReference Include="..\IDBLayer\IDBLayer.csproj" />
   </ItemGroup>
